--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <body>
-      <h1>Welcome {{user.email}}!</h1>
+      <h1>Welcome {{user.email}}! (1st mod test)</h1>
 
       <hr/>
       <h2>Client ID</h2>
